# labtools

./: .readthedocs.yml  README.md  laminar_boundaries.m  requirements.txt  setup.cfg  setup.py
autopilot/: get_autopilot_subject_data_example.py
autopilot/maintenance/: pi_ips.txt  update_autopilot.sh  update_pis.sh
configs/bonsai/: SkyGPU.bonsai  SkyGPU_MCS.bonsai  SkyGPU_MCS.bonsai.layout
configs/open_ephys/: behavior_config_MCS
docs/: Makefile  conf.py  index.rst  labtools.rst  labtools.slack.rst  modules.rst  requirements_docs.txt  slack.rst
docs/api/mesoscope/: index.md  io.md
docs/autopilot/: data.md  index.md  maintenance.md
docs/configs/: bonsai.md  open_ephys.md
docs/projects/: preycapture.md
docs/projects/preycapture/: acquisition.md  data.md  index.md
docs/projects/preycapture/analysis/: analysis_matlab.md  analysis_python.md  index.md
labtools/mesoscope/: __init__.py  io.py
labtools/slack/: __init__.py  load.py
