[metadata]
name= labtools
version= 0.0.1
description= general use utility functions for the wehr lab
author = Wehr Lab
url = https://github.com/wehr-lab/labtools
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires = 
    pandas
    numpy
    tqdm
    scanimage-tiff-reader >= 1.4.1
    scikit-video >= 1.1.11

[options.extras_require]
docs = 
    sphinxcontrib-napoleon
    sphinx_rtd_theme
    sphinx>=3.0.0
    myst-parser
    furo

